--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,4 +51,32 @@ nav {
 }
 main {
 	background-color: var(--clr--primary);
+	max-width: 750px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.card {
+	background-color: var(--clr--accent);
+	padding: 1em;
+	margin: 1em;
+	cursor: pointer;
+	transition: 1s ease-in-out;
+}
+
+.card:hover {
+	background-color: var(--clr--secondary);
+}
+.model {
+	position: absolute;
+	top: 0;
+	background-color: var(--clr--secondary);
+	height: 100vh;
+	width: 100%;
+}
+
+.close-model-icon {
+	margin: 2em 0 0 2em;
+	transform: scale(2.5);
+	cursor: pointer;
 }
